# ShmeaDB

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  Doxyfile  INSTALL.md  README.md  docker-compose.yaml  g_export.h  install.sh  main.cpp  main.h
.github/workflows/: auto-merge.yml  c-cpp.yml  docker-image.yml
Backend/Database/: CMakeLists.txt  GAnalysis.cpp  GAnalysis.h  GList.cpp  GList.h  GLogger.cpp  GLogger.h  GObject.cpp  GObject.h  GPointer.h  GString.cpp  GString.h  GString_helpers.cpp  GTable.cpp  GTable.h  GType.cpp  GType.h  GType_helpers.cpp  GType_operators.cpp  GVector.h  PNGPlotter.cpp  PNGPlotter.h  SaveFolder.cpp  SaveFolder.h  SaveTable.cpp  SaveTable.h  Serializable.cpp  Serializable.h  ServiceData.cpp  ServiceData.h  gtable.cpp  gtype.cpp  image.cpp  image.h  maxid.cpp  oldjson.cpp  png-helper.cpp  png-helper.h  saveitem.cpp  savelist.cpp  (+1 more)
Backend/Networking/: CMakeLists.txt  ServiceData.cpp  ServiceData.h  connection.cpp  connection.h  crypt.cpp  crypt.h  instance.cpp  instance.h  main.cpp  main.h  service.cpp  service.h  socket.cpp  socket.h
services/: bad_request.h  handshake_client.h  handshake_server.h  logout_client.h  logout_server.h
unit-tests/: .gitignore  AAPLtestTable.csv  CMakeLists.txt  INSTALL.md  build_and_test.sh  main.cpp  main.h  testTable.csv  unit-test.cpp  unit-test.h
unit-tests/Backend/Database/: CMakeLists.txt  GList-test.cpp  GList-test.h  GObjects-test.cpp  GObjects-test.h  GPointer-test.cpp  GPointer-test.h  GString-test.cpp  GString-test.h  GTable-test.cpp  GTable-test.h  GType-test.cpp  GType-test.h  GVector-test.cpp  GVector-test.h  image-test.cpp  image-test.h
unit-tests/Backend/Networking/: CMakeLists.txt  crypt-test.cpp  crypt-test.h
unit-tests/datasets/: wordlist.txt  wordlist2.txt
